--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "babel-preset-latest": "^6.16.0",
     "reshape-standard": "^0.4.2",
+    "spike": "^0.14.2",
     "spike-css-standards": "^0.1.3",
     "spike-page-id": "^0.1.0",
     "spike-records": "^0.4.1",
