--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
   },
   "bugs": "https://github.com/static-dev/pagination-example/issues",
   "dependencies": {
-    "babel-preset-latest": "^6.16.0",
-    "reshape-standard": "^0.4.2",
-    "spike": "^0.14.2",
-    "spike-css-standards": "^0.1.3",
-    "spike-page-id": "^0.1.0",
-    "spike-records": "^0.4.1",
-    "webpack": "^1.13.3"
+    "reshape-standard": "^1.0.0",
+    "spike": "^1.0.0",
+    "spike-css-standards": "^1.0.0",
+    "spike-js-standards": "^1.0.0",
+    "spike-page-id": "^1.0.0",
+    "spike-records": "^1.0.1",
+    "webpack": "^2.3.3"
   },
   "devDependencies": {
-    "snazzy": "^5.0.0",
-    "standard": "^8.6.0"
+    "snazzy": "^6.0.0",
+    "standard": "^10.0.1"
   },
   "homepage": "https://github.com/static-dev/pagination-example",
   "main": "app.js",
